# SIP_server

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AUDIO_CHAT_GUIDE.md  CHAT_FEATURE.md  CLAUDE.md  Dockerfile  GRADIO_UI_README.md  QUICK_START.md  README.md  build.sh  call_center.py  chat.html  config.py  docker-compose.yml  gradio_ui.py  main.py  pyproject.toml  receive_server.py  reply_handler.py  run.sh  sts.py  web_chat.py
helper/: PROMPT.py  custom_sts_handler.py  openai_sts_handler.py  rtp_handler.py  sip_parsers.py  sip_session.py  wav_handler.py  ws_command.py  ws_helper.py  ws_server.py
helper/llm_backends/: api.py  llm_backend.py  local.py  models.py
helper/parser/: exceptions.py
model/: call_status.py  sip_message.py  ws_command.py
scripts/: build.sh
src/sip_server/: config.py  receive_server.py
src/sip_server/helper/: rtp_handler.py  sip_parsers.py  sip_session.py  wav_handler.py  ws_command.py  ws_helper.py
src/sip_server/model/: rtp.py  sip_message.py
