[project]
name = "sip-server-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.12.4",
  "pydantic-settings>=2.12.0",
  "pydub>=0.25.1",
  "python-dotenv>=1.2.1",
  "silero-vad>=6.2.0",
  "websockets>=15.0.1",
]

[tool.ruff.lint]
extend-select = ["I"]
