[project]
name = "sip-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.4.4",
  "pydantic>=2.13.2",
  "pydantic-settings>=2.12.0",
  "pydub>=0.25.1",
  "python-dotenv>=1.2.1",
  "silero-vad>=6.2.0",
  "websockets>=15.0.1",
]

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["uv_build>=0.10,<0.12"]
build-backend = "uv_build"

[tool.ty.environment]
root = ["./src/sip_server"]
python = "./.venv"
